{
    "name": "InMoov",
    "maps": [
        {
            "name": "Left Hand",
            "id": "94141e1b-1a67-4c44-b36f-c3ea7bf90a78",
            "actions": [
                {
                    "name": "ThumbPress",
                    "type": "Value",
                    "id": "f9dcb827-109d-4442-8dac-de392dde6699",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MRPPress",
                    "type": "Value",
                    "id": "123658fa-6480-42f9-ad47-6f889593bbd8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "IndexPress",
                    "type": "Value",
                    "id": "e75a8f0d-d9c9-4d88-bf52-b6836dc39f1d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Velocity",
                    "type": "Value",
                    "id": "acbcb24b-9e8c-4424-a791-0b7b69233dbf",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f4bd67f-3eb2-4349-b5a0-339e438fb2f1",
                    "path": "<OculusTouchController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MRPPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4cefc8f5-b3b1-431a-b828-39c472898172",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndexPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5c15251-6b16-49b4-bd60-0735580aa371",
                    "path": "<OculusTouchController>{LeftHand}/devicePose/velocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Velocity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22bacc29-5ddf-41e0-8e4f-28d976164037",
                    "path": "<OculusTouchController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Right Hand",
            "id": "d5a0078a-9e4a-4683-a1e2-5a2be2bf6fc2",
            "actions": [
                {
                    "name": "ThumbPress",
                    "type": "Value",
                    "id": "7c100139-746f-45c4-a01f-da669e2b97d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MRPPress",
                    "type": "Value",
                    "id": "7a3dc560-264e-4d18-a9c6-0a9d142c137a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "IndexPress",
                    "type": "Value",
                    "id": "e40bf1ea-4cea-4d2c-a14f-483348355478",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Velocity",
                    "type": "Value",
                    "id": "4fdcf4af-0dcc-4041-9dcd-8573fb7127fd",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be47b0ea-2995-4ea2-95f5-c2b7cb17e757",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ab0867f-26af-424e-8e35-0063afd16aab",
                    "path": "<OculusTouchController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MRPPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa3edef0-a451-4064-9f6b-47ef65012edb",
                    "path": "<OculusTouchController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndexPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b63bf166-1ae1-4cd8-9d6a-4f500146c606",
                    "path": "<OculusTouchController>{RightHand}/devicePose/velocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Velocity",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}